--- a/water_demand_forecasting/pyproject.toml
+++ b/water_demand_forecasting/pyproject.toml
@@ -2,6 +2,7 @@
 name = "water_demand_forecasting"
 version = "0.0.1"
 description = "Water demand forecasting"
+authors = ["Diego Corredor"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -18,7 +19,7 @@ mypy = "^0.761"
 pylint = "^2.5.3"
 
 [tool.poetry.scripts]
-build_portfolio = "name = "water_demand_forecasting.cli:main"
+water_demand_forecasting = "water_demand_forecasting.cli:main"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
