--- a/water_demand_forecasting/pyproject.toml
+++ b/water_demand_forecasting/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.7"
 pandas = ">=0.24.0"
 pyyaml = "^5.3.1"
 click = "^7.1.2"
+sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
