--- a/water_demand_forecasting/pyproject.toml
+++ b/water_demand_forecasting/pyproject.toml
@@ -10,6 +10,13 @@ pandas = ">=0.24.0"
 pyyaml = "^5.3.1"
 click = "^7.1.2"
 sklearn = "^0.0"
+lint = "^1.2.1"
+numpy = "^1.19.5"
+tensorflow = "2.4.0"
+cuda = "^0.0.1"
+keras = "^2.6.0"
+matplotlib = "^3.4.2"
+ipykernel = "^6.0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
