--- a/water_demand_forecasting/pyproject.toml
+++ b/water_demand_forecasting/pyproject.toml
@@ -31,3 +31,7 @@ water_demand_forecasting = "water_demand_forecasting.cli:main"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.deephell.main]
+from = {format = "poetry", path = "pyproject.toml"}
+to = {format = "setuppy", path = "setup.py"}
