--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ click = "^7.1.2"
 sklearn = "^0.0"
 lint = "^1.2.1"
 numpy = "^1.19.5"
-matplotlib = "^3.4.2"
+matplotlib = "3.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
